⌨️ Add F3 keyboard shortcut to toggle FPS display
- Press F3 to instantly hide/show FPS overlay
- Shows notification when toggled
- Simple and fast way to get it out of the way

--- a/electron/index.html
+++ b/electron/index.html
@@ -409,6 +409,8 @@
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
     <link rel="stylesheet" href="team-collaboration.css">
     <script src="team-collaboration.js"></script>
+    <!-- FPS Display Toggle -->
+    <script src="toggle-fps-display.js"></script>
 </head>
 <body>
     <div id="app">
