--- a/electron/index.html
+++ b/electron/index.html
@@ -286,6 +286,8 @@
             display: flex;
             flex-direction: column;
             transition: width 0.3s;
+            overflow-y: auto;
+            overflow-x: hidden;
         }
         
         #right-sidebar.collapsed {
