--- a/electron/index.html
+++ b/electron/index.html
@@ -288,6 +288,7 @@
             transition: width 0.3s;
             overflow-y: auto;
             overflow-x: hidden;
+            padding-top: 10px;
         }
         
         #right-sidebar.collapsed {
