🔧 Add bottom padding to right sidebar
- Changed top padding back to 10px
- Added padding-bottom: 100px
- Allows scrolling to see all content at bottom
- 'Try these commands' section now fully visible

--- a/electron/index.html
+++ b/electron/index.html
@@ -288,7 +288,8 @@
             transition: width 0.3s;
             overflow-y: auto;
             overflow-x: hidden;
-            padding-top: 50px;
+            padding-top: 10px;
+            padding-bottom: 100px;
         }
         
         #right-sidebar.collapsed {
