--- a/electron/index.html
+++ b/electron/index.html
@@ -629,11 +629,22 @@
     <!-- Monaco Editor - Proper AMD Loader Setup -->
     <script>
         // Set up AMD loader before loading Monaco
+        // Define Node.js modules as empty to prevent Monaco from trying to load them
         var require = { 
             paths: { 
                 'vs': '../node_modules/monaco-editor/min/vs' 
+            },
+            // Stub out Node.js modules that Monaco might try to load
+            define: function(name, deps, callback) {
+                if (typeof name === 'string' && (name === 'fs' || name === 'os' || name === 'child_process')) {
+                    return {};
+                }
             }
         };
+        
+        // Provide fake Node modules to prevent errors
+        window.module = undefined;
+        window.process = window.process || { env: {}, platform: 'browser' };
     </script>
     <script src="../node_modules/monaco-editor/min/vs/loader.js"></script>
     <script>
