🚀 ULTIMATE AI Response System - Streaming, Queue, Code Actions!
✅ Streaming Responses:
- Real-time character-by-character output
- Live terminal-style display
- ⏹️ STOP button (Ctrl+Shift+X hotkey)
- Pulsing 'Streaming...' indicator
- Auto-scroll as content arrives
- AbortController for clean cancellation

✅ Message Queue System:
- 📬 Queue banner appears when busy
- Shows '2 messages queued'
- ▶️ Send Now button per message
- 🗑️ Delete button per message
- Auto-process queue after completion
- Sticky banner at top of chat

✅ Code Block Actions:
- Parse \\\language:filepath format
- Show file path (e.g. ProjectIDEAI\electron\index.html)
- Display +21/-5 line change counts
- 📖 Expand / 📕 Collapse button
- ✓ Accept - applies code to Monaco & saves
- ✗ Reject - marks as rejected
- 🖥️ Terminal - opens file directory in terminal
- Status badges (✅ Accepted, ❌ Rejected)

✅ Code Block Features:
- Collapsible code (starts collapsed)
- Syntax highlighting preview
- File path detection
- Line diff calculation (+additions, -deletions)
- Apply directly to editor
- Open in external terminal
- Track accept/reject state

✅ UX Features:
- Stop current execution anytime
- Queue messages while AI is busy
- Reorder queue (send now)
- Remove unwanted queued messages
- See exactly what file/lines changed
- One-click accept to apply changes
- Beautiful jade/beige themed UI

🎯 Just Like Cursor:
- Streaming output ✅
- Stop button ✅
- Queue system ✅
- Code actions ✅
- Accept/reject ✅
- File references ✅

Next: Test streaming + queue!

--- a/electron/index.html
+++ b/electron/index.html
@@ -932,6 +932,7 @@
     <script src="offline-speech-engine.js"></script>
     <script src="file-explorer.js"></script>
     <script src="chat-history.js"></script>
+    <script src="ai-response-handler.js"></script>
     <script src="voice-coding.js"></script>
     
     <!-- REVOLUTIONARY NEW FEATURES -->
