--- a/electron/index.html
+++ b/electron/index.html
@@ -347,6 +347,7 @@
             right: 0;
             bottom: 0;
             background: rgba(0, 212, 255, 0.1);
+            -webkit-backdrop-filter: blur(4px);
             backdrop-filter: blur(4px);
             display: flex;
             align-items: center;
