--- a/electron/index.html
+++ b/electron/index.html
@@ -948,6 +948,7 @@
     <script src="ai-response-handler.js"></script>
     <script src="floating-chat.js"></script>
     <script src="tab-system.js"></script>
+    <script src="error-tracker.js"></script>
     <script src="voice-coding.js"></script>
     
     <!-- REVOLUTIONARY NEW FEATURES -->
