--- a/electron/index.html
+++ b/electron/index.html
@@ -954,6 +954,11 @@
     <script src="error-tracker.js"></script>
     <script src="voice-coding.js"></script>
     
+    <!-- PLUGIN SYSTEM - Run VS Code, Cursor, Visual Studio Extensions! -->
+    <script src="plugin-system.js"></script>
+    <script src="plugin-marketplace.js"></script>
+    <script src="plugins/code-stats.js"></script>
+    
     <!-- REVOLUTIONARY NEW FEATURES -->
     <script src="ai-live-preview.js"></script>
     <script src="visual-code-flow.js"></script>
