--- a/electron/index.html
+++ b/electron/index.html
@@ -974,6 +974,9 @@
     <!-- CINEMATIC VISUALIZATION - Orchestration mesh (Ctrl+Shift+V) -->
     <script src="cinematic-visualization.js"></script>
     
+    <!-- REMOTE LOGGER - Debug from terminal (even remotely!) -->
+    <script src="remote-logger.js"></script>
+    
     <!-- REVOLUTIONARY NEW FEATURES -->
     <script src="ai-live-preview.js"></script>
     <script src="visual-code-flow.js"></script>
