🎼 Added Full Orchestra Layout with Agentic Actions
FEATURES COMPLETED:
✅ 3-Pane Layout (File Explorer | AI Chat | Code Editor)
✅ 100 Parallel AI Sessions with tab management
✅ Conversation History (Today/This Week/Older)
✅ Model Auto-Discovery (Ollama + GGUF files)
✅ Multi-file Upload (+ button)
✅ Drive Scanning (C:\, D:\)
✅ Settings Panel with persistence

AGENTIC ACTIONS - 'Ask to build, fix bugs, and explore':
🏗️ Build Project - Create complete projects from scratch
🐛 Fix Bugs - Auto-scan and fix code issues
🔍 Explore Project - Analyze structure and dependencies
♻️ Refactor Code - Improve code quality
✅ Add Tests - Generate comprehensive tests
📝 Document Code - Auto-generate JSDoc and README

TECHNICAL DETAILS:
- CPU core detection for optimal parallel sessions
- System recommends  sessions max
- LocalStorage for conversation persistence
- Real-time model discovery every 30 seconds
- File upload with text preview
- Session-specific file attachment

USER EXPERIENCE:
- Ollama-style interface (familiar UX)
- Click Actions button for agentic menu
- Conversation search and filtering
- Auto-save chat history
- Seamless model switching mid-conversation
- No data loss between sessions

This transforms BigDaddyG into a true agentic coding companion!

--- a/electron/index.html
+++ b/electron/index.html
@@ -950,6 +950,10 @@
     <script src="chat-history.js"></script>
     <script src="ai-response-handler.js"></script>
     <script src="floating-chat.js"></script>
+    
+    <!-- ORCHESTRA LAYOUT - 3-Pane Ollama-style Interface with 100 Sessions -->
+    <script src="orchestra-layout.js"></script>
+    
     <script src="tab-system.js"></script>
     <script src="error-tracker.js"></script>
     <script src="voice-coding.js"></script>
