🤖 Exposed All Operations Globally for Full Agentic Control
AGENTIC GLOBAL API CREATED:
✅ window.agentic.file.*     - File operations
✅ window.agentic.editor.*   - Editor control
✅ window.agentic.tab.*      - Tab management
✅ window.agentic.ai.*       - AI operations
✅ window.agentic.terminal.* - Terminal control
✅ window.agentic.project.*  - Project operations
✅ window.agentic.ui.*       - UI control
✅ window.agentic.util.*     - Utilities

FILE OPERATIONS (window.agentic.file):
- create(filename, content, language)
- open(filePath)
- save(content, filePath)
- saveAs(filePath, content)
- delete(filePath)
- read(filePath)
- list(dirPath)

EDITOR OPERATIONS (window.agentic.editor):
- getContent()
- setContent(content)
- insert(text)
- replace(startLine, startCol, endLine, endCol, text)
- getSelection()
- format()
- goToLine(lineNumber)
- findReplace(find, replace, replaceAll)

TAB OPERATIONS (window.agentic.tab):
- create(title, content, type)
- close(tabId)
- switch(tabId)
- list()
- getActive()

AI OPERATIONS (window.agentic.ai):
- chat(message, model)
- generateCode(prompt, language)
- fixCode(code, language)
- generateTests(code, language)
- generateDocs(code, language)
- refactor(code, language)
- explain(code, language)
- toggleMode()
- getMode()

PROJECT OPERATIONS (window.agentic.project):
- create(name, type, options) - Creates full project structure!
- analyze() - Real project analysis
- scanBugs() - Real bug scanning

UI OPERATIONS (window.agentic.ui):
- notify(message, type)
- openChat()
- closeChat()
- showAgenticMenu()
- openPluginMarketplace()
- togglePanel(panelName)

QUICK ACCESS (window.AI):
- AI.createFile(name, content)
- AI.chat(message)
- AI.notify(message)
- AI.executeCommand(cmd)

PROJECT TEMPLATES:
✅ React app (package.json, App.jsx, index.js, HTML, README)
✅ Express API (package.json, server.js, .env, README)
✅ Node.js app (package.json, index.js, README)

RESULT:
🎯 AI can now create files, open tabs, and build projects!
🎯 All IDE operations 

--- a/electron/index.html
+++ b/electron/index.html
@@ -928,6 +928,9 @@
     <!-- Core Scripts -->
     <script src="renderer.js"></script>
     
+    <!-- AGENTIC GLOBAL API - Expose all operations for AI control -->
+    <script src="agentic-global-api.js"></script>
+    
     <!-- Feature Modules -->
     <script src="performance-modes.js"></script>
     <script src="visual-benchmark.js"></script>
