--- a/electron/index.html
+++ b/electron/index.html
@@ -931,6 +931,9 @@
     <!-- AGENTIC GLOBAL API - Expose all operations for AI control -->
     <script src="agentic-global-api.js"></script>
     
+    <!-- AI CODE TO TABS - Auto-create tabs from AI code -->
+    <script src="ai-code-to-tabs.js"></script>
+    
     <!-- Feature Modules -->
     <script src="performance-modes.js"></script>
     <script src="visual-benchmark.js"></script>
