--- a/electron/index.html
+++ b/electron/index.html
@@ -943,6 +943,9 @@
     <!-- UNIVERSAL DRAG SYSTEM - Make everything draggable -->
     <script src="universal-drag-system.js"></script>
     
+    <!-- ERROR PROTECTION - Bulletproof error handling -->
+    <script src="error-protection.js"></script>
+    
     <!-- Feature Modules -->
     <script src="performance-modes.js"></script>
     <script src="visual-benchmark.js"></script>
