--- a/electron/index.html
+++ b/electron/index.html
@@ -1258,6 +1258,9 @@
         console.log('[BigDaddyG] ✨ Everything ready! Start coding!');
     </script>
     
+    <!-- WEB BROWSER - Integrated browser -->
+    <script src="web-browser.js"></script>
+    
     <!-- IDE INITIALIZER - Final validation and system check (MUST BE LAST) -->
     <script src="ide-initializer.js"></script>
 </body>
