🔧 FIX: Chat input z-index - no longer hidden by terminal
PROBLEM:
- Chat input textarea hidden under terminal GUI
- User couldn't type in the chat pane
- Terminal overlay blocking interaction

SOLUTION:
- Set z-index: 1000 on ai-input-container
- Set z-index: 1001 on textarea and buttons
- Added background and padding for visibility
- Ensures chat input always accessible

STATUS: Chat input now clickable and usable!

--- a/electron/index.html
+++ b/electron/index.html
@@ -775,12 +775,12 @@
                         • "Optimize performance"
                     </div>
                 </div>
-                <div id="ai-input-container">
+                <div id="ai-input-container" style="position: relative; z-index: 1000; background: var(--void); padding: 10px; margin-bottom: 20px;">
                     <!-- File Attachments Display -->
                     <div id="file-attachments" style="display: none;"></div>
                     
-                    <textarea id="ai-input" placeholder="@ for context, / for commands, or drag files here 📎" class="chat-input-box"></textarea>
-                    <div style="display: flex; gap: 8px; margin-top: 10px;">
+                    <textarea id="ai-input" placeholder="@ for context, / for commands, or drag files here 📎" class="chat-input-box" style="position: relative; z-index: 1001;"></textarea>
+                    <div style="display: flex; gap: 8px; margin-top: 10px; position: relative; z-index: 1001;">
                         <button id="ai-send-btn" onclick="sendToAI()" style="flex: 1; padding: 10px; background: var(--cyan); color: var(--void); border: none; border-radius: 5px; font-weight: bold; cursor: pointer;">💬 Send</button>
                         <button id="voice-btn" onclick="startVoiceInput()" style="padding: 10px 15px; background: rgba(255, 107, 53, 0.2); color: var(--orange); border: 1px solid var(--orange); border-radius: 5px; font-weight: bold; cursor: pointer;">🎤</button>
                         <button onclick="clearChat()" style="padding: 10px 15px; background: rgba(255, 71, 87, 0.2); color: var(--red); border: 1px solid var(--red); border-radius: 5px; font-weight: bold; cursor: pointer;">🗑️</button>
