🔧 FIX: Right sidebar scrolling - extra padding for terminal
SCROLLING FIX:

✅ CHANGES:
1. Increased right-sidebar padding-bottom to 500px
2. Increased ai-chat-messages padding-bottom to 500px
3. Now you can scroll past terminal completely
4. See all content including settings, model scanner, etc.

🐛 PROBLEM SOLVED:
- Welcome text was cut off by terminal
- Couldn't see bottom content
- Model scanner hidden
- Settings panel inaccessible

📊 RESULT:
- Full scrolling now works
- All content visible
- Terminal doesn't block anymore
- Professional UX

Status: Scrolling fixed!

--- a/electron/index.html
+++ b/electron/index.html
@@ -295,7 +295,7 @@
             overflow-y: auto;
             overflow-x: hidden;
             padding-top: 10px;
-            padding-bottom: 100px;
+            padding-bottom: 500px; /* Extra padding for terminal panel */
         }
         
         #right-sidebar.collapsed {
@@ -320,6 +320,7 @@
             flex: 1;
             overflow-y: auto;
             padding: 15px;
+            padding-bottom: 500px; /* Extra padding for terminal */
         }
         
         .ai-message {
