🎨 FEATURE: Full-screen code editor mode
LAYOUT IMPROVEMENTS:

✅ NEW BEHAVIOR:
1. Terminal RESIZES entire layout (like VS Code!)
2. When terminal closed → Editor gets FULL HEIGHT
3. When terminal opened → Editor shrinks, terminal appears
4. Smooth transitions for professional feel

🎯 HOW IT WORKS:
- main-container has margin-bottom: 0 by default
- When terminal opens → margin-bottom: 400px
- Layout automatically adjusts
- No overlapping panels!

🎨 USER EXPERIENCE:
- Close terminal → FULL SCREEN editing!
- Open terminal → Split view
- Smooth animations
- Professional like VS Code/Cursor

📊 BEFORE vs AFTER:

BEFORE:
- Terminal overlays content
- Needed 500px padding workaround
- Content hidden behind terminal

AFTER:
- Terminal pushes content up
- Clean layout resize
- Everything visible
- Full screen when terminal closed

Status: Professional layout system!

--- a/electron/index.html
+++ b/electron/index.html
@@ -295,7 +295,7 @@
             overflow-y: auto;
             overflow-x: hidden;
             padding-top: 10px;
-            padding-bottom: 500px; /* Extra padding for terminal panel */
+            padding-bottom: 20px; /* Normal padding - no need for extra since terminal resizes layout */
         }
         
         #right-sidebar.collapsed {
@@ -320,7 +320,7 @@
             flex: 1;
             overflow-y: auto;
             padding: 15px;
-            padding-bottom: 500px; /* Extra padding for terminal */
+            padding-bottom: 20px; /* Normal padding */
         }
         
         .ai-message {
