🧪 AUTO-TEST: System verification module
COMPREHENSIVE TESTING:

✅ NEW MODULE: system-verification.js

🧪 AUTO-TESTS:
1. Monaco Editor - setValue, getValue, language
2. File Explorer - Tab creation, file reading
3. Panel System - Collapse/expand functionality
4. Terminal - Toggle and control
5. Chat System - Input, send, floating chat

⚡ AUTO-RUN:
- Tests run automatically 5 seconds after load
- Verifies everything works
- Prints nice report in console

💡 MANUAL COMMANDS:
- systemVerification.runAllTests() - Full test
- systemVerification.quick() - Quick check

📊 REPORT FORMAT:
✅ Monaco Editor: PASS
✅ File Explorer: PASS
✅ Panel System: PASS
✅ Terminal: PASS
✅ Chat System: PASS

🎯 RESULT:
- Know immediately if something is broken
- See test results in console
- Professional quality assurance

Status: Auto-testing enabled!

--- a/electron/index.html
+++ b/electron/index.html
@@ -1272,6 +1272,9 @@
     <!-- PANEL MANAGER - Universal panel control -->
     <script src="panel-manager.js"></script>
     
+    <!-- SYSTEM VERIFICATION - Auto-test all systems -->
+    <script src="system-verification.js"></script>
+    
     <!-- IDE INITIALIZER - Final validation and system check (MUST BE LAST) -->
     <script src="ide-initializer.js"></script>
 </body>
