--- a/electron/index.html
+++ b/electron/index.html
@@ -1275,6 +1275,9 @@
     <!-- SYSTEM VERIFICATION - Auto-test all systems -->
     <script src="system-verification.js"></script>
     
+    <!-- AUTOMATED INTEGRATION TEST - Full user simulation -->
+    <script src="automated-integration-test.js"></script>
+    
     <!-- IDE INITIALIZER - Final validation and system check (MUST BE LAST) -->
     <script src="ide-initializer.js"></script>
 </body>
